# dryad

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
.github/workflows/: ContinuousIntegration.yml
cmake/: dependencies.cmake  develop_dependencies.cmake  dryad-config.cmake.in  release_dependencies.cmake  unit_testing.cmake  unit_testing_python.cmake
documentation/: atomic-relaxation-data.ipynb  identifiers.ipynb
documentation/atomic-relaxation-data/: 1-transition-data.ipynb  2-subshell-configuration-data.ipynb
python/: CMakeLists.txt
python/examples/: dryad-equality-operators.ipynb  dryad-example-h1.ipynb  dryad-example.ipynb  dryad-identifiers.ipynb
python/examples/resources/endf/: n-004_Be_009.endf
python/examples/resources/gnds/: n-004_Be_009.endf.gnds.xml
python/src/: AtomicRelaxation.python.cpp  CoherentDistributionData.python.cpp  DistributionDataType.python.cpp  Documentation.python.cpp  IncoherentDistributionData.python.cpp  InteractionType.python.cpp  InterpolationType.python.cpp  IsotropicAngularDistributions.python.cpp  LegendreAngularDistribution.python.cpp  LegendreAngularDistributionFunction.python.cpp  LegendreAngularDistributions.python.cpp  Metadata.python.cpp  MultiEnergyDistributions.python.cpp  PolynomialMultiplicity.python.cpp  ProjectileTarget.python.cpp  Reaction.python.cpp  ReactionCategory.python.cpp  ReactionProduct.python.cpp  ReactionType.python.cpp  ReferenceFrame.python.cpp  TabulatedAngularDistribution.python.cpp  TabulatedAngularDistributionFunction.python.cpp  TabulatedAngularDistributions.python.cpp  TabulatedAverageCosine.python.cpp  TabulatedAverageEnergy.python.cpp  TabulatedCrossSection.python.cpp  TabulatedEnergyDistribution.python.cpp  TabulatedEnergyDistributionFunction.python.cpp  TabulatedEnergyDistributions.python.cpp  TabulatedFormFactor.python.cpp  TabulatedMultiplicity.python.cpp  TabulatedScatteringFunction.python.cpp  ToleranceConvergence.python.cpp  TwoBodyDistributionData.python.cpp  UncorrelatedDistributionData.python.cpp  UniformAngularDistribution.python.cpp  UniformAngularDistributions.python.cpp  UniformDistributionType.python.cpp  UniformEnergyDistribution.python.cpp  UniformEnergyDistributions.python.cpp  (+6 more)
python/src/atomic/: ElectronSubshellConfiguration.python.cpp  NonRadiativeTransitionData.python.cpp  RadiativeTransitionData.python.cpp  TransitionType.python.cpp
python/src/covariance/: CrossSectionCovarianceBlock.python.cpp  CrossSectionMetaData.python.cpp  CrossSectionMetadata.python.cpp  LinearCombinationCovariance.python.cpp  ProductMultiplicityCovarianceMatrix.python.cpp  ScalingType.python.cpp  VarianceScaling.python.cpp  matrix.python.cpp
python/src/id/: ElectronSubshellID.python.cpp  ElementID.python.cpp  EnergyGroup.python.cpp  LevelID.python.cpp  ParticleID.python.cpp  ReactionID.python.cpp  ReactionType.python.cpp
python/src/resonances/: ResonanceParameters.python.cpp
python/stubs/dryad/: atomic.pyi  covariance.pyi  dryad.pyi  id.pyi  resonances.pyi
python/test/: Test_dryad_AtomicRelaxation.py  Test_dryad_CoherentDistributionData.py  Test_dryad_Documentation.py  Test_dryad_IncoherentDistributionData.py  Test_dryad_LegendreAngularDistribution.py  Test_dryad_LegendreAngularDistributionFunction.py  Test_dryad_LegendreAngularDistributions.py  Test_dryad_Metadata.py  Test_dryad_ProjectileTarget.py  Test_dryad_Reaction.py  Test_dryad_ReactionProduct.py  Test_dryad_TabulatedAngularDistribution.py  Test_dryad_TabulatedAngularDistributionFunction.py  Test_dryad_TabulatedAngularDistributions.py  Test_dryad_TabulatedAverageCosine.py  Test_dryad_TabulatedAverageEnergy.py  Test_dryad_TabulatedCrossSection.py  Test_dryad_TabulatedEnergyDistribution.py  Test_dryad_TabulatedEnergyDistributionFunction.py  Test_dryad_TabulatedEnergyDistributions.py  Test_dryad_TabulatedFormFactor.py  Test_dryad_TabulatedMultiplicity.py  Test_dryad_TabulatedScatteringFunction.py  Test_dryad_TwoBodyDistributionData.py  Test_dryad_UncorrelatedDistributionData.py  Test_dryad_UniformAngularDistribution.py  Test_dryad_UniformAngularDistributions.py  Test_dryad_UniformEnergyDistribution.py  Test_dryad_UniformEnergyDistributions.py
python/test/atomic/: Test_dryad_atomic_ElectronSubshellConfiguration.py  Test_dryad_atomic_NonRadiativeTransitionData.py  Test_dryad_atomic_RadiativeTransitionData.py
python/test/covariance/: Test_dryad_covariance_CrossSectionCovarianceBlock.py  Test_dryad_covariance_CrossSectionMetaData.py  Test_dryad_covariance_CrossSectionMetadata.py  Test_dryad_covariance_LinearCombinationCovariance.py  Test_dryad_covariance_VarianceScaling.py  Test_dryad_covariance_matrix.py
python/test/id/: Test_dryad_id_ElectronSubshellID.py  Test_dryad_id_ElementID.py  Test_dryad_id_EnergyGroup.py  Test_dryad_id_LevelID.py  Test_dryad_id_ParticleID.py  Test_dryad_id_ReactionID.py  Test_dryad_id_ReactionType.py
src/: dryad.hpp
src/dryad/: AtomicRelaxation.hpp  CoherentDistributionData.hpp  CrossSection.hpp  DistributionDataType.hpp  Documentation.hpp  GridDistributions.hpp  IncoherentDistributionData.hpp  InteractionType.hpp  IsotropicAngularDistributions.hpp  LegendreAngularDistribution.hpp  LegendreAngularDistributionFunction.hpp  LegendreAngularDistributions.hpp  (+32 more)
test/: AtomicRelaxation.test.cpp  CMakeLists.txt  CoherentDistributionData.test.cpp  Documentation.test.cpp  IncoherentDistributionData.test.cpp  LegendreAngularDistribution.test.cpp  LegendreAngularDistributions.test.cpp  PolynomialMultiplicity.test.cpp  ProjectileTarget.test.cpp  Reaction.test.cpp  ReactionProduct.test.cpp  TabulatedAngularDistribution.test.cpp  TabulatedAngularDistributionFunction.test.cpp  TabulatedAngularDistributions.test.cpp  TabulatedAverageCosine.test.cpp  TabulatedCrossSection.test.cpp  TabulatedEnergyDistribution.test.cpp  TabulatedEnergyDistributionFunction.test.cpp  TabulatedEnergyDistributions.test.cpp  TabulatedFormFactor.test.cpp  TabulatedScatteringFunction.test.cpp  TwoBodyDistributionData.test.cpp  UncorrelatedDistributionData.test.cpp  UniformAngularDistributions.test.cpp  UniformEnergyDistributions.test.cpp
(+608 files in other folders)
